compiler/php.output
Terminals unused in grammar

    ELSEIF
    FUNCTION
    RETURN
    ID
    MULT_ASSIGN
    DIV_ASSIGN


State 0 conflicts: 1 shift/reduce
State 19 conflicts: 1 reduce/reduce


Grammar

    0 $accept: programa $end

    1 programa: PHP_OPEN sentencias PHP_CLOSE
    2         | PHP_OPEN sentencias
    3         | sentencias
    4         | error

    5 sentencias: ε
    6           | sentencias sentencia

    7 sentencia: asignacion ';'
    8          | declaracion ';'
    9          | expresion ';'
   10          | echo_stmt ';'
   11          | if_stmt
   12          | while_stmt
   13          | for_stmt
   14          | do_while_stmt ';'
   15          | bloque
   16          | BREAK ';'
   17          | CONTINUE ';'
   18          | error ';'

   19 bloque: '{' sentencias '}'

   20 declaracion: VARIABLE

   21 asignacion: VARIABLE '=' expresion
   22           | VARIABLE PLUS_ASSIGN expresion
   23           | VARIABLE MINUS_ASSIGN expresion
   24           | VARIABLE INC
   25           | VARIABLE DEC

   26 echo_stmt: TOK_ECHO expresion

   27 if_stmt: IF '(' expresion ')' bloque
   28        | IF '(' expresion ')' bloque ELSE bloque

   29 while_stmt: WHILE '(' expresion ')' bloque

   30 do_while_stmt: DO bloque WHILE '(' expresion ')'

   31 for_stmt: FOR '(' asignacion ';' expresion ';' asignacion ')' bloque

   32 expresion: expresion_aritmetica
   33          | expresion_logica
   34          | expresion_relacional
   35          | VARIABLE
   36          | NUMERO
   37          | STRING
   38          | TRUE
   39          | FALSE
   40          | '(' expresion ')'

   41 expresion_aritmetica: expresion '+' expresion
   42                     | expresion '-' expresion
   43                     | expresion '*' expresion
   44                     | expresion '/' expresion
   45                     | expresion CONCAT expresion
   46                     | '-' expresion

   47 expresion_relacional: expresion EQ expresion
   48                     | expresion NE expresion
   49                     | expresion LT expresion
   50                     | expresion GT expresion
   51                     | expresion LE expresion
   52                     | expresion GE expresion

   53 expresion_logica: expresion AND expresion
   54                 | expresion OR expresion
   55                 | NOT expresion


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 27 28 29 30 31 40
    ')' (41) 27 28 29 30 31 40
    '*' (42) 43
    '+' (43) 41
    '-' (45) 42 46
    '/' (47) 44
    ';' (59) 7 8 9 10 14 16 17 18 31
    '=' (61) 21
    '{' (123) 19
    '}' (125) 19
    error (256) 4 18
    PHP_OPEN (258) 1 2
    PHP_CLOSE (259) 1
    TOK_ECHO (260) 26
    IF (261) 27 28
    ELSE (262) 28
    ELSEIF (263)
    WHILE (264) 29 30
    FOR (265) 31
    DO (266) 30
    BREAK (267) 16
    CONTINUE (268) 17
    FUNCTION (269)
    RETURN (270)
    NUMERO <int_val> (271) 36
    STRING <string_val> (272) 37
    ID <string_val> (273)
    TRUE <bool_val> (274) 38
    FALSE <bool_val> (275) 39
    VARIABLE <ptr_simbolo> (276) 20 21 22 23 24 25 35
    EQ (277) 47
    NE (278) 48
    LE (279) 51
    GE (280) 52
    LT (281) 49
    GT (282) 50
    AND (283) 53
    OR (284) 54
    NOT (285) 55
    INC (286) 24
    DEC (287) 25
    PLUS_ASSIGN (288) 22
    MINUS_ASSIGN (289) 23
    MULT_ASSIGN (290)
    DIV_ASSIGN (291)
    CONCAT (292) 45
    UMINUS (293)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    programa <nodo> (50)
        on left: 1 2 3 4
        on right: 0
    sentencias <nodo> (51)
        on left: 5 6
        on right: 1 2 3 6 19
    sentencia <nodo> (52)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 6
    bloque <nodo> (53)
        on left: 19
        on right: 15 27 28 29 30 31
    declaracion <nodo> (54)
        on left: 20
        on right: 8
    asignacion <nodo> (55)
        on left: 21 22 23 24 25
        on right: 7 31
    echo_stmt <nodo> (56)
        on left: 26
        on right: 10
    if_stmt <nodo> (57)
        on left: 27 28
        on right: 11
    while_stmt <nodo> (58)
        on left: 29
        on right: 12
    do_while_stmt <nodo> (59)
        on left: 30
        on right: 14
    for_stmt <nodo> (60)
        on left: 31
        on right: 13
    expresion <nodo> (61)
        on left: 32 33 34 35 36 37 38 39 40
        on right: 9 21 22 23 26 27 28 29 30 31 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    expresion_aritmetica <nodo> (62)
        on left: 41 42 43 44 45 46
        on right: 32
    expresion_relacional <nodo> (63)
        on left: 47 48 49 50 51 52
        on right: 34
    expresion_logica <nodo> (64)
        on left: 53 54 55
        on right: 33


State 0

    0 $accept: • programa $end

    error     shift, and go to state 1
    PHP_OPEN  shift, and go to state 2

    $end      reduce using rule 5 (sentencias)
    error     [reduce using rule 5 (sentencias)]
    TOK_ECHO  reduce using rule 5 (sentencias)
    IF        reduce using rule 5 (sentencias)
    WHILE     reduce using rule 5 (sentencias)
    FOR       reduce using rule 5 (sentencias)
    DO        reduce using rule 5 (sentencias)
    BREAK     reduce using rule 5 (sentencias)
    CONTINUE  reduce using rule 5 (sentencias)
    NUMERO    reduce using rule 5 (sentencias)
    STRING    reduce using rule 5 (sentencias)
    TRUE      reduce using rule 5 (sentencias)
    FALSE     reduce using rule 5 (sentencias)
    VARIABLE  reduce using rule 5 (sentencias)
    NOT       reduce using rule 5 (sentencias)
    '-'       reduce using rule 5 (sentencias)
    '{'       reduce using rule 5 (sentencias)
    '('       reduce using rule 5 (sentencias)

    programa    go to state 3
    sentencias  go to state 4


State 1

    4 programa: error •

    $default  reduce using rule 4 (programa)


State 2

    1 programa: PHP_OPEN • sentencias PHP_CLOSE
    2         | PHP_OPEN • sentencias

    $default  reduce using rule 5 (sentencias)

    sentencias  go to state 5


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 6


State 4

    3 programa: sentencias •
    6 sentencias: sentencias • sentencia

    error     shift, and go to state 7
    TOK_ECHO  shift, and go to state 8
    IF        shift, and go to state 9
    WHILE     shift, and go to state 10
    FOR       shift, and go to state 11
    DO        shift, and go to state 12
    BREAK     shift, and go to state 13
    CONTINUE  shift, and go to state 14
    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 19
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '{'       shift, and go to state 22
    '('       shift, and go to state 23

    $end  reduce using rule 3 (programa)

    sentencia             go to state 24
    bloque                go to state 25
    declaracion           go to state 26
    asignacion            go to state 27
    echo_stmt             go to state 28
    if_stmt               go to state 29
    while_stmt            go to state 30
    do_while_stmt         go to state 31
    for_stmt              go to state 32
    expresion             go to state 33
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 5

    1 programa: PHP_OPEN sentencias • PHP_CLOSE
    2         | PHP_OPEN sentencias •
    6 sentencias: sentencias • sentencia

    error      shift, and go to state 7
    PHP_CLOSE  shift, and go to state 37
    TOK_ECHO   shift, and go to state 8
    IF         shift, and go to state 9
    WHILE      shift, and go to state 10
    FOR        shift, and go to state 11
    DO         shift, and go to state 12
    BREAK      shift, and go to state 13
    CONTINUE   shift, and go to state 14
    NUMERO     shift, and go to state 15
    STRING     shift, and go to state 16
    TRUE       shift, and go to state 17
    FALSE      shift, and go to state 18
    VARIABLE   shift, and go to state 19
    NOT        shift, and go to state 20
    '-'        shift, and go to state 21
    '{'        shift, and go to state 22
    '('        shift, and go to state 23

    $end  reduce using rule 2 (programa)

    sentencia             go to state 24
    bloque                go to state 25
    declaracion           go to state 26
    asignacion            go to state 27
    echo_stmt             go to state 28
    if_stmt               go to state 29
    while_stmt            go to state 30
    do_while_stmt         go to state 31
    for_stmt              go to state 32
    expresion             go to state 33
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 6

    0 $accept: programa $end •

    $default  accept


State 7

   18 sentencia: error • ';'

    ';'  shift, and go to state 38


State 8

   26 echo_stmt: TOK_ECHO • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 40
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 9

   27 if_stmt: IF • '(' expresion ')' bloque
   28        | IF • '(' expresion ')' bloque ELSE bloque

    '('  shift, and go to state 41


State 10

   29 while_stmt: WHILE • '(' expresion ')' bloque

    '('  shift, and go to state 42


State 11

   31 for_stmt: FOR • '(' asignacion ';' expresion ';' asignacion ')' bloque

    '('  shift, and go to state 43


State 12

   30 do_while_stmt: DO • bloque WHILE '(' expresion ')'

    '{'  shift, and go to state 22

    bloque  go to state 44


State 13

   16 sentencia: BREAK • ';'

    ';'  shift, and go to state 45


State 14

   17 sentencia: CONTINUE • ';'

    ';'  shift, and go to state 46


State 15

   36 expresion: NUMERO •

    $default  reduce using rule 36 (expresion)


State 16

   37 expresion: STRING •

    $default  reduce using rule 37 (expresion)


State 17

   38 expresion: TRUE •

    $default  reduce using rule 38 (expresion)


State 18

   39 expresion: FALSE •

    $default  reduce using rule 39 (expresion)


State 19

   20 declaracion: VARIABLE •
   21 asignacion: VARIABLE • '=' expresion
   22           | VARIABLE • PLUS_ASSIGN expresion
   23           | VARIABLE • MINUS_ASSIGN expresion
   24           | VARIABLE • INC
   25           | VARIABLE • DEC
   35 expresion: VARIABLE •

    INC           shift, and go to state 47
    DEC           shift, and go to state 48
    PLUS_ASSIGN   shift, and go to state 49
    MINUS_ASSIGN  shift, and go to state 50
    '='           shift, and go to state 51

    ';'       reduce using rule 20 (declaracion)
    ';'       [reduce using rule 35 (expresion)]
    $default  reduce using rule 35 (expresion)


State 20

   55 expresion_logica: NOT • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 52
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 21

   46 expresion_aritmetica: '-' • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 53
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 22

   19 bloque: '{' • sentencias '}'

    $default  reduce using rule 5 (sentencias)

    sentencias  go to state 54


State 23

   40 expresion: '(' • expresion ')'

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 55
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 24

    6 sentencias: sentencias sentencia •

    $default  reduce using rule 6 (sentencias)


State 25

   15 sentencia: bloque •

    $default  reduce using rule 15 (sentencia)


State 26

    8 sentencia: declaracion • ';'

    ';'  shift, and go to state 56


State 27

    7 sentencia: asignacion • ';'

    ';'  shift, and go to state 57


State 28

   10 sentencia: echo_stmt • ';'

    ';'  shift, and go to state 58


State 29

   11 sentencia: if_stmt •

    $default  reduce using rule 11 (sentencia)


State 30

   12 sentencia: while_stmt •

    $default  reduce using rule 12 (sentencia)


State 31

   14 sentencia: do_while_stmt • ';'

    ';'  shift, and go to state 59


State 32

   13 sentencia: for_stmt •

    $default  reduce using rule 13 (sentencia)


State 33

    9 sentencia: expresion • ';'
   41 expresion_aritmetica: expresion • '+' expresion
   42                     | expresion • '-' expresion
   43                     | expresion • '*' expresion
   44                     | expresion • '/' expresion
   45                     | expresion • CONCAT expresion
   47 expresion_relacional: expresion • EQ expresion
   48                     | expresion • NE expresion
   49                     | expresion • LT expresion
   50                     | expresion • GT expresion
   51                     | expresion • LE expresion
   52                     | expresion • GE expresion
   53 expresion_logica: expresion • AND expresion
   54                 | expresion • OR expresion

    EQ      shift, and go to state 60
    NE      shift, and go to state 61
    LE      shift, and go to state 62
    GE      shift, and go to state 63
    LT      shift, and go to state 64
    GT      shift, and go to state 65
    AND     shift, and go to state 66
    OR      shift, and go to state 67
    CONCAT  shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    '*'     shift, and go to state 71
    '/'     shift, and go to state 72
    ';'     shift, and go to state 73


State 34

   32 expresion: expresion_aritmetica •

    $default  reduce using rule 32 (expresion)


State 35

   34 expresion: expresion_relacional •

    $default  reduce using rule 34 (expresion)


State 36

   33 expresion: expresion_logica •

    $default  reduce using rule 33 (expresion)


State 37

    1 programa: PHP_OPEN sentencias PHP_CLOSE •

    $default  reduce using rule 1 (programa)


State 38

   18 sentencia: error ';' •

    $default  reduce using rule 18 (sentencia)


State 39

   35 expresion: VARIABLE •

    $default  reduce using rule 35 (expresion)


State 40

   26 echo_stmt: TOK_ECHO expresion •
   41 expresion_aritmetica: expresion • '+' expresion
   42                     | expresion • '-' expresion
   43                     | expresion • '*' expresion
   44                     | expresion • '/' expresion
   45                     | expresion • CONCAT expresion
   47 expresion_relacional: expresion • EQ expresion
   48                     | expresion • NE expresion
   49                     | expresion • LT expresion
   50                     | expresion • GT expresion
   51                     | expresion • LE expresion
   52                     | expresion • GE expresion
   53 expresion_logica: expresion • AND expresion
   54                 | expresion • OR expresion

    EQ      shift, and go to state 60
    NE      shift, and go to state 61
    LE      shift, and go to state 62
    GE      shift, and go to state 63
    LT      shift, and go to state 64
    GT      shift, and go to state 65
    AND     shift, and go to state 66
    OR      shift, and go to state 67
    CONCAT  shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    '*'     shift, and go to state 71
    '/'     shift, and go to state 72

    $default  reduce using rule 26 (echo_stmt)


State 41

   27 if_stmt: IF '(' • expresion ')' bloque
   28        | IF '(' • expresion ')' bloque ELSE bloque

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 74
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 42

   29 while_stmt: WHILE '(' • expresion ')' bloque

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 75
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 43

   31 for_stmt: FOR '(' • asignacion ';' expresion ';' asignacion ')' bloque

    VARIABLE  shift, and go to state 76

    asignacion  go to state 77


State 44

   30 do_while_stmt: DO bloque • WHILE '(' expresion ')'

    WHILE  shift, and go to state 78


State 45

   16 sentencia: BREAK ';' •

    $default  reduce using rule 16 (sentencia)


State 46

   17 sentencia: CONTINUE ';' •

    $default  reduce using rule 17 (sentencia)


State 47

   24 asignacion: VARIABLE INC •

    $default  reduce using rule 24 (asignacion)


State 48

   25 asignacion: VARIABLE DEC •

    $default  reduce using rule 25 (asignacion)


State 49

   22 asignacion: VARIABLE PLUS_ASSIGN • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 79
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 50

   23 asignacion: VARIABLE MINUS_ASSIGN • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 80
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 51

   21 asignacion: VARIABLE '=' • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 81
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 52

   41 expresion_aritmetica: expresion • '+' expresion
   42                     | expresion • '-' expresion
   43                     | expresion • '*' expresion
   44                     | expresion • '/' expresion
   45                     | expresion • CONCAT expresion
   47 expresion_relacional: expresion • EQ expresion
   48                     | expresion • NE expresion
   49                     | expresion • LT expresion
   50                     | expresion • GT expresion
   51                     | expresion • LE expresion
   52                     | expresion • GE expresion
   53 expresion_logica: expresion • AND expresion
   54                 | expresion • OR expresion
   55                 | NOT expresion •

    $default  reduce using rule 55 (expresion_logica)


State 53

   41 expresion_aritmetica: expresion • '+' expresion
   42                     | expresion • '-' expresion
   43                     | expresion • '*' expresion
   44                     | expresion • '/' expresion
   45                     | expresion • CONCAT expresion
   46                     | '-' expresion •
   47 expresion_relacional: expresion • EQ expresion
   48                     | expresion • NE expresion
   49                     | expresion • LT expresion
   50                     | expresion • GT expresion
   51                     | expresion • LE expresion
   52                     | expresion • GE expresion
   53 expresion_logica: expresion • AND expresion
   54                 | expresion • OR expresion

    $default  reduce using rule 46 (expresion_aritmetica)


State 54

    6 sentencias: sentencias • sentencia
   19 bloque: '{' sentencias • '}'

    error     shift, and go to state 7
    TOK_ECHO  shift, and go to state 8
    IF        shift, and go to state 9
    WHILE     shift, and go to state 10
    FOR       shift, and go to state 11
    DO        shift, and go to state 12
    BREAK     shift, and go to state 13
    CONTINUE  shift, and go to state 14
    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 19
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '{'       shift, and go to state 22
    '}'       shift, and go to state 82
    '('       shift, and go to state 23

    sentencia             go to state 24
    bloque                go to state 25
    declaracion           go to state 26
    asignacion            go to state 27
    echo_stmt             go to state 28
    if_stmt               go to state 29
    while_stmt            go to state 30
    do_while_stmt         go to state 31
    for_stmt              go to state 32
    expresion             go to state 33
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 55

   40 expresion: '(' expresion • ')'
   41 expresion_aritmetica: expresion • '+' expresion
   42                     | expresion • '-' expresion
   43                     | expresion • '*' expresion
   44                     | expresion • '/' expresion
   45                     | expresion • CONCAT expresion
   47 expresion_relacional: expresion • EQ expresion
   48                     | expresion • NE expresion
   49                     | expresion • LT expresion
   50                     | expresion • GT expresion
   51                     | expresion • LE expresion
   52                     | expresion • GE expresion
   53 expresion_logica: expresion • AND expresion
   54                 | expresion • OR expresion

    EQ      shift, and go to state 60
    NE      shift, and go to state 61
    LE      shift, and go to state 62
    GE      shift, and go to state 63
    LT      shift, and go to state 64
    GT      shift, and go to state 65
    AND     shift, and go to state 66
    OR      shift, and go to state 67
    CONCAT  shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    '*'     shift, and go to state 71
    '/'     shift, and go to state 72
    ')'     shift, and go to state 83


State 56

    8 sentencia: declaracion ';' •

    $default  reduce using rule 8 (sentencia)


State 57

    7 sentencia: asignacion ';' •

    $default  reduce using rule 7 (sentencia)


State 58

   10 sentencia: echo_stmt ';' •

    $default  reduce using rule 10 (sentencia)


State 59

   14 sentencia: do_while_stmt ';' •

    $default  reduce using rule 14 (sentencia)


State 60

   47 expresion_relacional: expresion EQ • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 84
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 61

   48 expresion_relacional: expresion NE • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 85
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 62

   51 expresion_relacional: expresion LE • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 86
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 63

   52 expresion_relacional: expresion GE • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 87
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 64

   49 expresion_relacional: expresion LT • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 88
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 65

   50 expresion_relacional: expresion GT • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 89
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 66

   53 expresion_logica: expresion AND • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 90
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 67

   54 expresion_logica: expresion OR • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 91
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 68

   45 expresion_aritmetica: expresion CONCAT • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 92
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 69

   41 expresion_aritmetica: expresion '+' • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 93
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 70

   42 expresion_aritmetica: expresion '-' • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 94
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 71

   43 expresion_aritmetica: expresion '*' • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 95
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 72

   44 expresion_aritmetica: expresion '/' • expresion

    NUMERO    shift, and go to state 15
    STRING    shift, and go to state 16
    TRUE      shift, and go to state 17
    FALSE     shift, and go to state 18
    VARIABLE  shift, and go to state 39
    NOT       shift, and go to state 20
    '-'       shift, and go to state 21
    '('       shift, and go to state 23

    expresion             go to state 96
    expresion_aritmetica  go to state 34
    expresion_relacional  go to state 35
    expresion_logica      go to state 36


State 73

    9 sentencia: expresion ';' •

    $default  reduce using rule 9 (sentencia)


State 74

   27 if_stmt: IF '(' expresion • ')' bloque
   28        | IF '(' expresion • ')' bloque ELSE bloque
   41 expresion_aritmetica: expresion • '+' expresion
   42                     | expresion • '-' expresion
   43                     | expresion • '*' expresion
   44                     | expresion • '/' expresion
   45                     | expresion • CONCAT expresion
   47 expresion_relacional: expresion • EQ expresion
   48                     | expresion • NE expresion
   49                     | expresion • LT expresion
   50                     | expresion • GT expresion
   51                     | expresion • LE expresion
   52                     | expresion • GE expresion
   53 expresion_logica: expresion • AND expresion
   54                 | expresion • OR expresion

    EQ      shift, and go to state 60
    NE      shift, and go to state 61
    LE      shift, and go to state 62
    GE      shift, and go to state 63
    LT      shift, and go to state 64
    GT      shift, and go to state 65
    AND     shift, and go to state 66
    OR      shift, and go to state 67
    CONCAT  shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    '*'     shift, and go to state 71
    '/'     shift, and go to state 72
    ')'     shift, and go to state 97


State 75

   29 while_stmt: WHILE '(' expresion • ')' bloque
   41 expresion_aritmetica: expresion • '+' expresion
   42                     | expresion • '-' expresion
   43                     | expresion • '*' expresion
   44                     | expresion • '/' expresion
   45                     | expresion • CONCAT expresion
   47 expresion_relacional: expresion • EQ expresion
   48                     | expresion • NE expresion
   49                     | expresion • LT expresion
   50                     | expresion • GT expresion
   51                     | expresion • LE expresion
   52                     | expresion • GE expresion
   53 expresion_logica: expresion • AND expresion
   54                 | expresion • OR expresion

    EQ      shift, and go to state 60
    NE      shift, and go to state 61
    LE      shift, and go to state 62
    GE      shift, and go to state 63
    LT      shift, and go to state 64
    GT      shift, and go to state 65
    AND     shift, and go to state 66
    OR      shift, and go to state 67
    CONCAT  shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    '*'     shift, and go to state 71
    '/'     shift, and go to state 72
    ')'     shift, and go to state 98


State 76

   21 asignacion: VARIABLE • '=' expresion
   22           | VARIABLE • PLUS_ASSIGN expresion
   23           | VARIABLE • MINUS_ASSIGN expresion
   24           | VARIABLE • INC
   25           | VARIABLE • DEC

    INC           shift, and go to state 47
    DEC           shift, and go to state 48
    PLUS_ASSIGN   shift, and go to state 49
    MINUS_ASSIGN  shift, and go to state 50
    '='           shift, and go to state 51


State 77

   31 for_stmt: FOR '(' asignacion • ';' expresion ';' asignacion ')' bloque

    ';'  shift, and go to state 99


State 78

   30 do_while_stmt: DO bloque WHILE • '(' expresion ')'

    '('  shift, and go to state 100


State 79

   22 asignacion: VARIABLE PLUS_ASSIGN expresion •
   41 expresion_aritmetica: expresion • '+' expresion
   42                     | expresion • '-' expresion
   43                     | expresion • '*' expresion
   44                     | expresion • '/' expresion
   45                     | expresion • CONCAT expresion
   47 expresion_relacional: expresion • EQ expresion
   48                     | expresion • NE expresion
   49                     | expresion • LT expresion
   50                     | expresion • GT expresion
   51                     | expresion • LE expresion
   52                     | expresion • GE expresion
   53 expresion_logica: expresion • AND expresion
   54                 | expresion • OR expresion

    EQ      shift, and go to state 60
    NE      shift, and go to state 61
    LE      shift, and go to state 62
    GE      shift, and go to state 63
    LT      shift, and go to state 64
    GT      shift, and go to state 65
    AND     shift, and go to state 66
    OR      shift, and go to state 67
    CONCAT  shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    '*'     shift, and go to state 71
    '/'     shift, and go to state 72

    $default  reduce using rule 22 (asignacion)


State 80
